--- a/Project/Back_End/Dockerfile
+++ b/Project/Back_End/Dockerfile
@@ -1,6 +1,11 @@
 FROM node:20.15.1
-WORKDIR /usr/src/index
+
+WORKDIR /app
+
 COPY package*.json ./
+
 RUN npm install
+
 COPY . .
-CMD ["node","index.js"]
+
+CMD ["npm", "run", "dev", "--host"]
