--- a/Project/FRONTEND/Dockerfile
+++ b/Project/FRONTEND/Dockerfile
@@ -1,7 +1,12 @@
 FROM node:20.15.1
-WORKDIR /index
-COPY package.json .
-COPY package-lock.json .
+
+WORKDIR /app
+
+COPY package*.json ./
+
 RUN npm install
+
 COPY . .
-CMD ["npm","run","dev","--host"]
+
+
+CMD ["npm","run", "dev", "--host"]
